tests/negative/module/Int.orng
// error: redefinition of symbol `Int`
// 
